--- a/index.css
+++ b/index.css
@@ -1,6 +1,107 @@
 button {
   font-size: 1.5rem;
-  padding: 0.5rem;
+  padding: 0.5rem;* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  line-height: 1.5;
+  color: whitesmoke;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 1rem;
+}
+
+main {
+  padding: 3rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 1rem;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+h5 {
+  font-size: 1rem;
+}
+
+h6 {
+  font-size: 0.75rem;
+}
+
+p {
+  margin-bottom: 1rem;
+}
+
+ul,
+ol {
+  margin-bottom: 1rem;
+  padding-left: 2rem;
+}
+
+form {
+  margin-bottom: 2rem;
+}
+
+button {
+  border: none;
+  outline: none;
+}
+
+footer {
+  color: #222;
+  text-align: center;
+  bottom: 0;
+}
+
+footer a {
+  color: #222;
+}
+
+input {
+  border: none;
+  outline: none;
+}
+
 }
 
 .numbers-section {
