--- a/calculator.css
+++ b/calculator.css
@@ -1,1 +1,56 @@
+/* rgb(240, 140, 157) */
+.calculator-main {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 3rem;
+
+  border: 3px solid pink;
+  border-radius: 30px;
+  background-color: rgb(254, 214, 220);
+}
+
+.calculator-main > section:nth-of-type(1) {
+  height: 12rem;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+
+  border: 3px solid darkslategray;
+  border-radius: 10px;
+  background-color: darkolivegreen;
+}
+
+#screen {
+  padding: 1rem;
+}
+#answer {
+  text-align: right;
+  padding: 1rem 3rem 1rem 1rem;
+}
+
+.calculator-main > section:nth-of-type(2) {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
+}
+
+.calculator-main > section:nth-of-type(3) {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 0.5rem;
+}
+
+.calculator-main > section:nth-of-type(4) {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 0.5rem;
+}
+
+button {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  color: white;
+  background-color: rgb(251, 174, 187);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.259);
+}
 
